--- a/config/database.yml
+++ b/config/database.yml
@@ -15,13 +15,11 @@
 # gem 'pg'
 #
 development:
-  adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
-  database: rental_cats_development
+  database: db/development.sqlite3
   host: localhost
   pool: 5
-  username: appacademy
-  password:
   
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
