--- a/config/database.yml
+++ b/config/database.yml
@@ -15,11 +15,13 @@
 # gem 'pg'
 #
 development:
-  adapter: sqlite3
+  adapter: postgresql
   encoding: unicode
-  database: db/development.sqlite3
+  database: rental_cats_test
   host: localhost
   pool: 5
+  username: appacademy
+  password:
   
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
